upgraded design, fixing scrollbar of right column from appearing on left side when its width overflows

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
 	background-color: #504949;
+	font-family: 'Roboto', sans-serif;
 }
 
 .columnContainer {
@@ -9,51 +12,74 @@ body {
 }
 
 #leftColumn {
-/*	left: 0.5%;*/
+	left: 1%;
 	position: absolute;
 /*	border: 2px solid lightslategray;*/
 	width: 14.5%;
 	height: 95%;
-	background-color: white;
+	background-color: #8c8c8c;
 	top: 10px;
+	overflow-y: auto;
+}
+
+#leftColumn::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+	border-radius: 10px;
+	background-color: #CCCCCC;
+}
+
+#leftColumn::-webkit-scrollbar {
+	width: 5px;
+	background-color: #F5F5F5;
+}
+
+#leftColumn::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #D62929;
+	background-image: -webkit-linear-gradient(90deg,
+											  transparent,
+											  rgba(0, 0, 0, 0.4) 50%,
+											  transparent,
+											  transparent);
+	
 }
 
 #rightColumn {
-	left: 84.5%;
+	left: 83%;
 	position: absolute;
 /*	border: 2px solid black;*/
 	width: 15.5%;
 	height: 95%;
-	background-color: white;
+	background-color: #8c8c8c;
 	top: 10px;
-	overflow-x: hidden;
-	overflow-y: auto;
 }
 
 #middleColumn {
-	left: 14.5%;
+	left: 15.5%;
 	position: absolute;
 /*	border: 2px solid black;*/
 	width: 70%;
 	height: 95%;
 	top: 10px;
 	background-color: darkgray;
+	padding-left: 2%;
 }
 
 #chatBox  {
 	font-size: 18px;
 	padding-left: 10px;
 	position: absolute;
-	border: 2px solid black;
+	/*border: 2px solid black;*/
+	border: 0;
 	border-radius: 5px;
-	width: 85%;
+	width: 82.9%;
 	height: 5%;
-	bottom: 5px;
-	left: 1.5%;
+	bottom: 4%;
+	left: 4.1%;
 }
 
 #chatBox:focus {
-	border: 1px solid transparent;
+	/*border: 1px solid transparent;*/
 	outline-width: 0;
 }
 
@@ -75,27 +101,23 @@ body {
 }
 
 .ChatWindow {
-	overflow-y: hidden;
+	overflow-y: auto;
 	overflow-x: hidden;
 	overflow-wrap: break-word;
 	position: absolute;
-	width: 97.5%;
+	width: 85%;
 	height: 85%;
+	padding-left: 10px;
+	padding-top: 5px;
 	background-color: white;
 	left: 1.5%;
 	top: 10px;
-	border: 2px solid black;
-	border-radius: 5px;
-}
-
-.ChatWindow:hover {
-	overflow-y: auto;
+	/*border: 2px solid black;*/
+	border-radius: 0px 5px 5px 5px;
 }
 
 .ChatWindow::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 	border-radius: 10px;
-	background-color: #CCCCCC;
 }
 
 .ChatWindow::-webkit-scrollbar {
@@ -106,49 +128,48 @@ body {
 .ChatWindow::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	background-color: #D62929;
-	background-image: -webkit-linear-gradient(90deg,
-											  transparent,
-											  rgba(0, 0, 0, 0.4) 50%,
-											  transparent,
-											  transparent);
 	
 }
 
 .message {
 	overflow-x: auto;
-	font-size: 16px;
-	padding: 8px;
+	font-size: 14px;
+	padding: 0;
 /*	border-top: 2px solid black;*/
 }
 
 .userNames {
 	font-style: italic;
 	display: inline;
+	font-size: 14px;
+	font-weight: bold;
 }
 
 #playersListHead {
 	font-size: 20px;
 	padding-bottom: 5px;
-	border-bottom: 1px solid black;
+	/*border-bottom: 1px solid black;*/
 	text-align: center;
 	position: sticky;
 	top: 0px;
-	background-color: white;
+	background-color: inherit;
 }
 
 .playersListUserNames {
 	margin: 0 0 0 0;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	border-bottom: 1px solid black;
+	/*border-bottom: 1px solid black;*/
 	font-style: italic;
 	font-weight: bold;
 	text-align: center;
 	cursor: pointer;
+	transition-duration: 0.25s;
 }
 
 .playersListUserNames:hover {
 	background-color: lightgrey;
+	transition-duration: 0.5s;
 }
 
 .rightClickMenu {
@@ -184,11 +205,10 @@ body {
 	left: 1.5%;
 	color: white;
 	font-size: 15px;
-	top: 1.25%;
+	top: 1.6%;
 }
 
 .chatTab {
-	border: 1px solid black;
 	margin-right: 0.5%;
 	border-radius: 2px 5px 0 0;
 	border-bottom: 0px;
@@ -210,4 +230,55 @@ body {
 	color: gray;
 	font-size: 10px;
 	float: right;
+	margin-right: 1%;
+}
+
+.CurrentMatchesList {
+	list-style: none;
+	text-align: center;
+	margin: 0;
+	padding-left: 0;
+}
+
+#CurrentMatchesHead {
+	font-size: 20px;
+	padding-bottom: 5px;
+	left: 0;
+	text-align: center;
+	position: sticky;
+	top: 0px;
+}
+
+.OpenMatchesList {
+	list-style: none;
+	text-align: center;
+	padding-left: 0;
+	margin: 0;
+}
+
+#OpenMatchesHead {
+	font-size: 20px;
+	padding-bottom: 5px;
+	text-align: center;
+	position: sticky;
+	top: 0px;
+}
+
+#playersListUserNamesContainer {
+	overflow-x: hidden;
+	overflow-y: auto;
+	height: 80%;
+}
+
+#playersListUserNamesContainer::-webkit-scrollbar-track {
+	border-radius: 10px;
+}
+
+#playersListUserNamesContainer::-webkit-scrollbar {
+	width: 5px;
+}
+
+#playersListUserNamesContainer::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #D62929;
 }
